Update after postcode version2 data

--- a/src/utils/test_data.ipynb
+++ b/src/utils/test_data.ipynb
@@ -698,15 +698,601 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "719\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Collateral_ID</th>\n",
+       "      <th>Property_Type</th>\n",
+       "      <th>Registration_Number</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Periphery</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Village</th>\n",
+       "      <th>Sheet_Plan</th>\n",
+       "      <th>Parcel</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>200756</td>\n",
+       "      <td>House</td>\n",
+       "      <td>0/16919</td>\n",
+       "      <td>Cyprus</td>\n",
+       "      <td>Nicosia</td>\n",
+       "      <td>ΔΗΜΟΣ ΣΤΡΟΒΟΛΟΥ</td>\n",
+       "      <td>ΔΗΜΟΣ ΣΤΡΟΒΟΛΟΥ</td>\n",
+       "      <td>30/05W1</td>\n",
+       "      <td>4424</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>200727</td>\n",
+       "      <td>House</td>\n",
+       "      <td>0/12752</td>\n",
+       "      <td>Cyprus</td>\n",
+       "      <td>Larnaca</td>\n",
+       "      <td>ΒΟΡΟΚΛΙΝΗ</td>\n",
+       "      <td>ΒΟΡΟΚΛΙΝΗ</td>\n",
+       "      <td>0/2-260-373</td>\n",
+       "      <td>501</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Collateral_ID Property_Type Registration_Number Country Periphery  \\\n",
+       "0         200756         House             0/16919  Cyprus   Nicosia   \n",
+       "1         200727         House             0/12752  Cyprus   Larnaca   \n",
+       "\n",
+       "              City          Village   Sheet_Plan Parcel  \n",
+       "0  ΔΗΜΟΣ ΣΤΡΟΒΟΛΟΥ  ΔΗΜΟΣ ΣΤΡΟΒΟΛΟΥ      30/05W1   4424  \n",
+       "1        ΒΟΡΟΚΛΙΝΗ        ΒΟΡΟΚΛΙΝΗ  0/2-260-373    501  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "original_data = pd.read_excel('/home/savvas/SUPER-NAS/USERS/Chirag/PROJECTS/202501-EY-Bank/data/property-data/PhysicalRiskSheetPlan_v2.xlsx')\n",
+    "original_data_col_id = original_data[\"Collateral_ID\"]\n",
+    "\n",
+    "print(len(original_data_col_id))\n",
+    "\n",
+    "original_data.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "438\n",
+      "438\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_v1 = pd.read_excel('/home/savvas/SUPER-NAS/USERS/Chirag/PROJECTS/202501-EY-Bank/src/temp/output/PhysicalRiskSheetPlan_directmatch_riskscore.xlsx')\n",
+    "data_v1_col_id = data_v1[\"Collateral_ID\"]\n",
+    "\n",
+    "print(len(data_v1_col_id))\n",
+    "\n",
+    "# print(len(set(data_v1_col_id)))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "281\n"
+     ]
+    }
+   ],
+   "source": [
+    "filter_data_col_id = list(set(original_data_col_id) - set(data_v1_col_id))\n",
+    "print(len(filter_data_col_id))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "291\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_v2 = pd.read_excel('/home/savvas/SUPER-NAS/USERS/Chirag/PROJECTS/202501-EY-Bank/src/temp/output/PhysicalRiskSheetPlan_processedmatch_riskscore.xlsx')\n",
+    "data_v2_col_id = data_v2[\"Collateral_ID\"]\n",
+    "\n",
+    "print(len(data_v2_col_id))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "filter_data_col_id_2 = list(set(filter_data_col_id) - set(data_v2_col_id))\n",
+    "print(len(filter_data_col_id_2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[202400, 69095, 83560, 37999, 38000, 38002, 113364, 86261, 108699, 201343]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filter_data_col_id_2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>#</th>\n",
+       "      <th>Ονομασία Δρόμου/Κοινότητας</th>\n",
+       "      <th>Designation of Street/Community</th>\n",
+       "      <th>Όριο Δρόμου ΑΠΟ - ΜΕΧΡΙ/Streetlimit FROM - TO</th>\n",
+       "      <th>Ταχυδρομικός Κώδικας / Postal Code</th>\n",
+       "      <th>Δήμος / Κοινότητα</th>\n",
+       "      <th>Municipality / Community</th>\n",
+       "      <th>Επαρχία</th>\n",
+       "      <th>District</th>\n",
+       "      <th>Ταχυδρομική Εξυπηρέτηση μέσω Ταχυδρομικού Γραφείου/Ταχυδρομικού Πρακτορείου</th>\n",
+       "      <th>Postal Service through Post Office/Postal Agency</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>Περιγραφή</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>205</td>\n",
+       "      <td>14ης Σεπτεμβρίου</td>\n",
+       "      <td>14 Septemvriou</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4760</td>\n",
+       "      <td>Όμοδος (το)</td>\n",
+       "      <td>Omodos</td>\n",
+       "      <td>Λεμεσός</td>\n",
+       "      <td>Lemesos</td>\n",
+       "      <td>Ταχυδρομικό Πρακτορείο Ομόδους - 4760</td>\n",
+       "      <td>Omodos Postal Agency - 4760</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>206</td>\n",
+       "      <td>15ης Αυγούστου</td>\n",
+       "      <td>15 Avgoustou</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7501</td>\n",
+       "      <td>Αβδελλερό</td>\n",
+       "      <td>Avdellero</td>\n",
+       "      <td>Λάρνακα</td>\n",
+       "      <td>Larnaka</td>\n",
+       "      <td>Ταχυδρομικό Πρακτορείο Αβδελλερού - 7501</td>\n",
+       "      <td>Avdellero Postal Agency - 7501</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     # Ονομασία Δρόμου/Κοινότητας Designation of Street/Community  \\\n",
+       "0  205           14ης Σεπτεμβρίου                  14 Septemvriou   \n",
+       "1  206             15ης Αυγούστου                    15 Avgoustou   \n",
+       "\n",
+       "  Όριο Δρόμου ΑΠΟ - ΜΕΧΡΙ/Streetlimit FROM - TO  \\\n",
+       "0                                           NaN   \n",
+       "1                                           NaN   \n",
+       "\n",
+       "   Ταχυδρομικός Κώδικας / Postal Code Δήμος / Κοινότητα  \\\n",
+       "0                                4760       Όμοδος (το)   \n",
+       "1                                7501         Αβδελλερό   \n",
+       "\n",
+       "  Municipality / Community  Επαρχία District  \\\n",
+       "0                   Omodos  Λεμεσός  Lemesos   \n",
+       "1                Avdellero  Λάρνακα  Larnaka   \n",
+       "\n",
+       "  Ταχυδρομική Εξυπηρέτηση μέσω Ταχυδρομικού Γραφείου/Ταχυδρομικού Πρακτορείου  \\\n",
+       "0              Ταχυδρομικό Πρακτορείο Ομόδους - 4760                            \n",
+       "1           Ταχυδρομικό Πρακτορείο Αβδελλερού - 7501                            \n",
+       "\n",
+       "  Postal Service through Post Office/Postal Agency  Description  Περιγραφή  \n",
+       "0                      Omodos Postal Agency - 4760          NaN        NaN  \n",
+       "1                   Avdellero Postal Agency - 7501          NaN        NaN  "
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "postal_code  = pd.read_excel('/home/savvas/SUPER-NAS/USERS/Chirag/PROJECTS/202501-EY-Bank/data/GIS-LAYERS/postal_codes.xlsx')\n",
+    "\n",
+    "postal_code.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1129"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unique_values = postal_code.drop_duplicates(subset=['Municipality / Community', 'Ταχυδρομικός Κώδικας / Postal Code'])\n",
+    "\n",
+    "len(unique_values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "unique_values.to_excel('/home/savvas/SUPER-NAS/USERS/Chirag/PROJECTS/202501-EY-Bank/data/GIS-LAYERS/postal_codes_v2.xlsx', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Municipality / Community</th>\n",
+       "      <th>Ταχυδρομικός Κώδικας / Postal Code</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Omodos</td>\n",
+       "      <td>4760</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Avdellero</td>\n",
+       "      <td>7501</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Egkomi Lefkosias</td>\n",
+       "      <td>2412</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Larnaka</td>\n",
+       "      <td>6018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Lefkosia (Pallouriotissa)</td>\n",
+       "      <td>1040</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32958</th>\n",
+       "      <td>Chelones</td>\n",
+       "      <td>5878</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33031</th>\n",
+       "      <td>Choulou</td>\n",
+       "      <td>8552</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33486</th>\n",
+       "      <td>Chrysida</td>\n",
+       "      <td>2730</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33561</th>\n",
+       "      <td>Psathi</td>\n",
+       "      <td>8749</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33629</th>\n",
+       "      <td>Psyllatos</td>\n",
+       "      <td>5661</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1129 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Municipality / Community  Ταχυδρομικός Κώδικας / Postal Code\n",
+       "0                         Omodos                                4760\n",
+       "1                      Avdellero                                7501\n",
+       "2               Egkomi Lefkosias                                2412\n",
+       "3                        Larnaka                                6018\n",
+       "4      Lefkosia (Pallouriotissa)                                1040\n",
+       "...                          ...                                 ...\n",
+       "32958                   Chelones                                5878\n",
+       "33031                    Choulou                                8552\n",
+       "33486                   Chrysida                                2730\n",
+       "33561                     Psathi                                8749\n",
+       "33629                  Psyllatos                                5661\n",
+       "\n",
+       "[1129 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unique_values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "750"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1056"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "risk_data = pd.read_excel('/home/savvas/SUPER-NAS/USERS/Chirag/PROJECTS/202501-EY-Bank/src/temp/PhysicalRiskUniquePostalCodesAddresses_with_risk.xlsx')\n",
+    "len(risk_data)\n",
+    "\n",
+    "original_post_data = pd.read_excel('/home/savvas/SUPER-NAS/USERS/Chirag/PROJECTS/202501-EY-Bank/data/property-data/PhysicalRiskUniquePostalCodesAddresses.xlsx')\n",
+    "len(original_post_data)\n",
+    "\n",
+    "risk_data_postal_code = risk_data['Postal Codes:']\n",
+    "issue_post_code = list(set(original_post_data['Postal Codes:']) - set(risk_data_postal_code))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "306"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(issue_post_code)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Length of risk_data: 750\n",
+      "Length of original_post_data: 1056\n",
+      "Issue data saved to /home/savvas/SUPER-NAS/USERS/Chirag/PROJECTS/202501-EY-Bank/src/temp/IssuePostalCodes.xlsx\n",
+      "Number of issue postal codes: 306\n",
+      "Number of rows in issue data: 306\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Load the risk data and original postal data\n",
+    "risk_data = pd.read_excel('/home/savvas/SUPER-NAS/USERS/Chirag/PROJECTS/202501-EY-Bank/src/temp/PhysicalRiskUniquePostalCodesAddresses_with_risk.xlsx')\n",
+    "print(f\"Length of risk_data: {len(risk_data)}\")\n",
+    "\n",
+    "original_post_data = pd.read_excel('/home/savvas/SUPER-NAS/USERS/Chirag/PROJECTS/202501-EY-Bank/data/property-data/PhysicalRiskUniquePostalCodesAddresses.xlsx')\n",
+    "print(f\"Length of original_post_data: {len(original_post_data)}\")\n",
+    "\n",
+    "# Extract postal codes from both dataframes\n",
+    "risk_data_postal_code = risk_data['Postal Codes:']\n",
+    "issue_post_code = list(set(original_post_data['Postal Codes:']) - set(risk_data_postal_code))\n",
+    "\n",
+    "# Filter the rows in the original data that correspond to the issue postal codes\n",
+    "issue_data = original_post_data[original_post_data['Postal Codes:'].isin(issue_post_code)]\n",
+    "\n",
+    "# Save the issue data to an Excel file\n",
+    "output_filepath = '/home/savvas/SUPER-NAS/USERS/Chirag/PROJECTS/202501-EY-Bank/src/temp/IssuePostalCodes.xlsx'\n",
+    "issue_data.to_excel(output_filepath, index=False)\n",
+    "print(f\"Issue data saved to {output_filepath}\")\n",
+    "\n",
+    "# Print summary\n",
+    "print(f\"Number of issue postal codes: {len(issue_post_code)}\")\n",
+    "print(f\"Number of rows in issue data: {len(issue_data)}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "original_post_data['Postal Codes:']"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "super-api",
+   "display_name": "gisenv2",
    "language": "python",
    "name": "python3"
   },
@@ -720,7 +1306,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
